--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img id="img-principal" src="https://i.blogs.es/733d09/xbox-cloud-gaming/1366_2000.jpeg" alt="Error de carga" />
     <h2 class="subtitulos">Prácticas</h2>
     <ul>
-        <li><a href="./Calculadora/index.html">Calculadora</a></li>
+        <li id="pract"><a href="./Calculadora/index.html">1.- Calculadora</a></li>
     </ul>
 
     <h2 class="subtitulos">Datos</h2>
