--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2 class="subtitulos">Prácticas</h2>
     <ul>
         <li id="pract"><a href="./Calculadora/index.html">Calculadora</a></li>
+        <li id="pract"><a href="./Formulario/index.html">2.- Formulario</a></li>
     </ul>
 
     <h2 class="subtitulos">Datos</h2>
